Incremental bundle and create on config changes, warning about unsatisfied dependencies within after the bundle task