@@ -3,7 +3,25 @@
  */
 package nox.tasks;
 
+import java.io.File;
+import java.io.IOException;
+import java.util.List;
+
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import com.google.common.collect.Lists;
+
+import org.apache.commons.io.FileUtils;
+import org.gradle.api.DefaultTask;
+import org.gradle.api.GradleException;
+import org.gradle.api.tasks.InputDirectory;
+import org.gradle.api.tasks.InputFile;
+import org.gradle.api.tasks.OutputDirectory;
+import org.gradle.api.tasks.TaskAction;
+import org.gradle.api.tasks.incremental.IncrementalTaskInputs;
+import org.gradle.util.ConfigureUtil;
+
 import groovy.lang.Closure;
 import nox.ext.Platform;
 import nox.internal.platform.Assembler;
@@ -11,27 +29,22 @@ import nox.internal.platform.Location;
 import nox.internal.platform.Repository;
 import nox.internal.platform.Target;
 import nox.internal.platform.Unit;
-import org.apache.commons.io.FileUtils;
-import org.gradle.api.DefaultTask;
-import org.gradle.api.GradleException;
-import org.gradle.api.tasks.InputDirectory;
-import org.gradle.api.tasks.OutputDirectory;
-import org.gradle.api.tasks.TaskAction;
-import org.gradle.api.tasks.incremental.IncrementalTaskInputs;
-import org.gradle.util.ConfigureUtil;
-
-import java.io.File;
-import java.io.IOException;
-import java.util.List;
 
 
 public class Create extends DefaultTask {
 
 	public static final String name = Create.class.getSimpleName().toLowerCase();
 
+	public static final String createConfigFile = "create-config.json";
+
 	private final Platform platform;
 
 	private final List<Location> locations = Lists.newArrayList();
+
+	@InputFile
+	public File getCreateConfigFile() {
+		return new File(getProject().getBuildDir(), createConfigFile);
+	}
 
 	@InputDirectory
 	public File getP2Dir() {
@@ -44,8 +57,6 @@ public class Create extends DefaultTask {
 	}
 
 	public String pdeVersion = "3.8";
-
-	public String vmArgs = "-XX:MaxPermSize=128M";
 
 	/* open for testing */
 	Assembler assembler = Assembler.instance();
@@ -64,7 +75,11 @@ public class Create extends DefaultTask {
 			action();
 			return;
 		}
-		inputs.outOfDate(details -> action());
+		inputs.outOfDate(details -> {
+			if (getP2Dir().equals(details.getFile())) {
+				action();
+			}
+		});
 	}
 
 	private void action() {
@@ -118,6 +133,15 @@ public class Create extends DefaultTask {
 		Location location = new Location(new Repository(path));
 		location.unit.addAll(locationUnit.units);
 		locations.add(location);
+	}
+
+	@Override
+	public String toString() {
+		try {
+			return new ObjectMapper().configure(SerializationFeature.INDENT_OUTPUT, true).writeValueAsString(locations);
+		} catch (JsonProcessingException ex) {
+			throw new GradleException("Failed to construct JSON", ex);
+		}
 	}
 
 }
